log/build_2025-06-14_19-43-14/arduinobot_py_examples/stderr.log
  File "/home/theo/arduinobot_ws/install/arduinobot_py_examples/lib/python3.12/site-packages/arduinobot_py_examples/simple_service_client.py", line 29
    def main()
              ^
SyntaxError: expected ':'

